# 2d_drawing

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  aircraft.cpp  aircraft.hpp  f_shader.glsl  graph.h  hit.cpp  hit.h  main.cpp  mode.h  objects.h  shader.h  units.h  v_shader.glsl  view.h
objects/: bullet.h  enemy.h  item.h  object.h  player.h
